added css, palindrome function, made responsive, input, btn

--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
-    
 
+    <div class="container">
+        <h1>Palindrome Checker</h1>
+        <hr>
+        <p><em>A palindrome is a word or sentence that's spelled the same way both forward and backward, ignoring punctuation, case, and spacing.</em></p>
 
+        <hr>
 
+        <div id="inputSec">
+            <input id="str" type="text" placeholder=" enter possible palindrome...">
+            <button onclick="palindrome()">Check</button>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
