added background image and credit

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         </div>
     </div>
 
+    <p id="photoRef"> <a href="https://unsplash.com/search/photos/words" target="_blank">Photo</a> by Amador Loureiro on Unsplash</p>
+    
+
     <script src="script.js"></script>
 </body>
 
